--- a/style.scss
+++ b/style.scss
@@ -7,28 +7,28 @@ h1, h2, h3, h4, h5 {
     font-size:50px;
 }
 h1 {
-    margin: 46px 0;
+    margin: 46px 0 70px;;
     font-size: 70px;
 }
 
 body {
     color:#5F4C0B;
-    background-color:#F8F3E1;
+    background-color:#FBF8EF;
     line-height: 1.9em;
     font-family: "sans";
     
     > div {
+        background-color:#F8F3E1;
         //background-color:yellow;
-        max-width:400px;
+        max-width:500px;
         margin: 50px auto;
-        padding: 30px 50px;
+        padding: 60px 50px;
         text-align:center;
     }
 
     #map {
         margin: 30px auto 0 auto;
         height:300px;
-        margin-left: -10%;
-        width:120%;
+        width:80%;
     }
 }
