--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,7 @@ body {
                 margin-top:30px;
                 float:right;
                 margin-right:20px;
+                color:$text_color;
             }
             .addperson {
                 text-style:underline;
