--- a/static/style.scss
+++ b/static/style.scss
@@ -32,6 +32,7 @@ body {
     font-family: "sans";
     
     > div {
+        border-radius:10px;
         background-color:$bg_color2;
         max-width:500px;
         margin: 50px auto;
